kube/apache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: apache
  name: apache
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: apache
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: apache
    spec:
      containers:
        - image: gcr.io/pl-dev-infra/demos/microservice-kafka/apache:1.0
          name: apache
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
