kube/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: order
  name: order
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: order
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: order
    spec:
      containers:
        - env:
            - name: SPRING_KAFKA_BOOTSTRAP_SERVERS
              value: kafka:9092
          image: bitprj/tinyhat-order-service
          name: order
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
