kube/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/global: "true"
        io.kompose.service: redis
    spec:
      containers:
        - args:
            - redis-server
            - --loadmodule
            - /usr/lib/redis/modules/rejson.so
            - --requirepass
            - "88901"
          image: redislabs/rejson:latest
          name: redis-redisshoppingcart-docker
          ports:
            - containerPort: 6379
          resources: {}
      restartPolicy: Always
status: {}
