kube/add.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: add-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: add-service
  template:
    metadata:
      labels:
        app: add-service
    spec:
      containers:
        - name: add-service
          image: bitprj/add-service
          ports:
            - containerPort: 31337
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: add-service
spec:
  selector:
    app: add-service
  ports:
    - port: 80
      targetPort: 31337
  type: ClusterIP
