kube/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-service
  template:
    metadata:
      labels:
        app: admin-service
    spec:
      containers:
        - name: admin-service
          image: bitprj/tinyhat-admin-service
          ports:
            - containerPort: 4040
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  selector:
    app: admin-service
  ports:
    - port: 80
      targetPort: 4040
  type: ClusterIP
