kube/custom-locust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-locust-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: custom-locust-service
  template:
    metadata:
      labels:
        app: custom-locust-service
    spec:
      containers:
        - name: custom-locust-service
          image: bitprj/custom-locust-service
          ports:
          - containerPort: 5557
            name: comm
          - containerPort: 5558
            name: comm-plus-1
          - containerPort: 8089
            name: web-ui
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: custom-locust-service
spec:
  selector:
    app: custom-locust-service
  ports:
    - port: 80
      targetPort: 8089
  type: LoadBalancer
