kube/email.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-service
  template:
    metadata:
      labels:
        app: email-service
    spec:
      containers:
        - name: email-service
          image: bitprj/email-service
          ports:
            - containerPort: 7777
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: email-service
spec:
  selector:
    app: email-service
  ports:
    - port: 80
      targetPort: 7777
  type: LoadBalancer
