kube/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - command:
          - gateway-service
          - --cors-allowed-origins=["*"]
        - name: gateway-service
          image: bitprj/gateway-service
          ports:
            - containerPort: 4444
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway-service
  ports:
    - port: 80
      targetPort: 4444
  type: LoadBalancer
