kube/loadgen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-test
  labels:
    name: load-test
spec:
  selector:
    matchLabels:
      name: load-test
  replicas: 1
  template:
    metadata:
      labels:
        name: load-test
    spec:
      containers:
      - name: load-test
        image: gcr.io/pl-dev-infra/demos/microservice-kafka/load-test:4.0
        imagePullPolicy: Always
        command: ["locust"]
        args: ["-u", "1", "-r", "1", "-f", "/config/locustfile.py",
               "--host", "http://apache:8080"]
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/load-balancer-type: "internal"
  labels:
    name: load-test
  name: load-test
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8089
  selector:
    name: load-test
