kube/moderate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderate-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderate-service
  template:
    metadata:
      labels:
        app: moderate-service
    spec:
      containers:
        - name: moderate-service
          image: bitprj/moderate-service
          ports:
            - containerPort: 5000
          # env:
          #   - name: MONGO_URL
          #     value: mongodb://mongo:27017/dev
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: moderate-service
spec:
  selector:
    app: knote
  ports:
    - port: 80
      targetPort: 5000
  type: LoadBalancer
