kube/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_PASSWORD
              value: dbpass
            - name: POSTGRES_USER
              value: dbuser
          image: gcr.io/pl-dev-infra/demos/microservice-kafka/postgres:1.0
          name: postgres
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    io.kompose.service: postgres
spec:
  ports:
    - name: client
      port: 5432
      protocol: TCP
  selector:
    io.kompose.service: postgres
