kube/scenario.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scenario-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scenario-service
  template:
    metadata:
      labels:
        app: scenario-service
    spec:
      containers:
        - name: scenario-service
          image: bitprj/scenario-service
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: scenario-service
spec:
  selector:
    app: scenario-service
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
